# lift

./: .coverage.Parkers-Mac-Studio.local.39031.XyrGOSZx  .coverage.Parkers-Mac-Studio.local.39032.XqMcFGGx  .coverage.Parkers-Mac-Studio.local.39033.XtLhtJMx  .coverage.Parkers-Mac-Studio.local.39034.XoOSQEEx  .coverage.Parkers-Mac-Studio.local.39035.XFpdTUux  .coverage.Parkers-Mac-Studio.local.39036.XXtlrlXx  .coverage.Parkers-Mac-Studio.local.39037.XHJAZWSx  .coverage.Parkers-Mac-Studio.local.39038.XelrMmDx  .coverage.Parkers-Mac-Studio.local.39039.XIfDuEnx  .coverage.Parkers-Mac-Studio.local.39042.XWPPRtRx  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  PRE_RELEASE_SETUP.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  copyright  install  rules
docs/: MCP_SERVER.md  architecture.md  data-model.md  extending.md  testing.md  troubleshooting.md
docs/tutorials/: custom-exercises.md  getting-started.md  program-design.md
examples/: README.md  backup-restore.sh  bulk-cutting-cycles.md  data-analysis.sql  weekly-workflow.md
lift/: __init__.py  main.py
lift/cli/: body.py  config.py  data.py  exercise.py  mcp.py  program.py  stats.py  workout.py
lift/core/: __init__.py  database.py  models.py  schema.sql
lift/data/: exercises.json  programs.json
lift/mcp/: README.md  __init__.py  config.py  handlers.py  resources.py  schemas.py  server.py  tools.py
lift/services/: body_service.py  config_service.py  exercise_service.py  export_service.py  import_service.py  pr_service.py  program_service.py  set_service.py  stats_service.py  workout_service.py
lift/utils/: body_formatters.py  calculations.py  charts.py  conversions.py  exercise_formatters.py  program_formatters.py  workout_formatters.py
man/: README.md  lift.1
packaging/homebrew/: lift.rb
scripts/: gen-man-formats.sh  install-man.sh
tests/: conftest.py  test_body_formatters.py  test_body_service.py  test_calculations.py  test_cli_body.py  test_cli_integration.py  test_cli_stats.py  test_cli_workout.py  test_config_service.py  test_conversions.py  test_e2e_complete_workflow.py  test_exercise_service.py  test_export_service.py  test_import_service.py  test_integration_cross_slice.py  test_mcp_config.py  test_mcp_resources.py  test_mcp_server.py  test_mcp_tools.py  test_pr_service.py  test_program_service.py  test_stats_service.py  test_workout_formatters.py  test_workout_service.py
