[project]
name = "lift"
version = "0.1.0"
description = "A robust feature-complete CLI for tracking weightlifting sessions with a focus on bodybuilding"
authors = [{name = "Parker Gabel"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "duckdb>=1.0.0",
    "pydantic>=2.8.0",
    "plotext>=5.2.8",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
lift = "lift.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=lift --cov-report=term-missing --cov-report=html"
